<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">视云客服</string>
    <string name="prompt">推荐的视频源：如果自动监测结果有误，请手动选择您的省份与网络类型</string>
    <string name="province">所在的省份：</string>
    <string name="isp">网络类型：</string>
    <string name="net_type">视频源</string>
    <string name="status">状态</string>
    <string name="fast">快</string>
    <string name="slow">慢</string>
    <string name="sn_text">您的设备SN号：</string>
    <string name="add_description">补充描述:</string>
    <string name="contact_phone_number">联系电话:</string>

    <string name="ismartv_hotline">视云影院24小时服务热线：</string>
    <string name="ismartv_number">4000590012</string>
    <string name="hardware_hotline">硬件与APP应用服务热线：</string>
    <string name="hardware_number">4001005001</string>
    <string name="weixin">微信公共平台：</string>
    <string name="ismartv">视云客服 ：</string>

    <string name="you_should_give_an_phone_number">请填写正确的手机号码</string>

    <string name="submit_sucess">提交成功!</string>
    <string name="submit_failed">提交失败!</string>

    <string name="definition_1">不稳定</string>
    <string name="definition_2">较慢</string>
    <string name="definition_3">一般</string>
    <string name="definition_4">通畅</string>
    <string name="definition_5">较快</string>
    <string name="select_success">是否选择该视频源？</string>

    <string name="speed_testing">正在测速...</string>

    <string name="button_label_stop">中止测试</string>
    <string name="button_label_retest">重新测试</string>
    <string name="oobe_subtitle">网络测速功能可以为您评估下载速度和带宽</string>
    <string name="your_bandwidth">你的网速</string>

    <string name="is">属于</string>


    <string name="adsl_1m">1M宽带</string>
    <string name="adsl_2m">2M宽带</string>
    <string name="adsl_4m">4M宽带</string>
    <string name="adsl_8m">8M宽带</string>
    <string name="adsl_10m">10M宽带</string>
    <string name="adsl_20m">20M宽带</string>

    <string name="speed_unit_byte">B/秒</string>
    <string name="speed_unit_kb">KB/秒</string>
    <string name="speed_unit_mb">MB/秒</string>

    <string name="your_avg_speed_is">当前网络环境下，下载速度可达</string>
    <string name="t1">专线</string>
    <string name="seems_failed">你的网络似乎有点问题</string>
    <string name="numbers_of_total">第@次测试（共#次）</string>
    <string name="default_ip">ICANN保留地址</string>

    <string name="quit">退&#160;&#160;出</string>
    <string name="back">返&#160;&#160;回</string>

    <string name="msg_network_exception">网络连接异常</string>
    <string name="msg_network_unestablished">无网络连接，请检查设置</string>
    <string name="button_label_setup_network">网络设置</string>

    <string name="unknown_area">未知地区</string>
    <string name="unknown_isp">未知运营商</string>

    <string name="button_label_OK">确定</string>
    <string name="between">介于#speed1#与#speed2#之间</string>

    <string name="setting">网络与蓝牙&gt;</string>

    <string name="StartTesting">开始测速</string>

    <string name="net_speedtester">切换视频源</string>

    <string name="current_node">当前视频源:</string>
    <string name="feedback_problem">问题反馈</string>
    <string name="service_help">客服帮助</string>

    <string name="net_speed_test">测速</string>
    <string name="unbind_node">自动获取</string>

    <string name="cancle">取消</string>

    <string name="auto_fetch">自动获取</string>

    <string name="node_bind_success">选择成功，请返回播放影片测试！</string>

    <string name="tring">可以尝试</string>
    <string name="can_select">建议选择</string>

    <string name="app_update_message">视频客服正在准备更新...</string>

    <string name="fill_contact_number">请填写联系电话!</string>

    <string name="test_complete_text">测速完成,请选择视频源</string>


    <string name="switch_to_auto">切换为自动获取</string>
    <string name="already_to_auto">已自动获取</string>

    <string name="test_interupt">测速已终止</string>


    <string name="node_speed_test">网络测速</string>
    <string name="submit_text">提交</string>

    <string name="max_msg_length">输入信息最长不要超过70个字符!</string>

    <string name="confirm_submit_feedback_msg">是否提交反馈信息?</string>

    <string name="device_code">设备识别码: </string>


</resources>
