<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@drawable/bg_fragment"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout android:layout_width="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginTop="60dp"
                  android:layout_marginLeft="40dp"
                  android:layout_height="wrap_content">
        <TextView
                android:layout_gravity="center"
                android:textSize="24sp"
                android:textColor="#FFFFFF"
                android:text="@string/ismartv_hotline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_gravity="center"
                android:text="@string/ismartv_number"
                android:textSize="36sp"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
        <TextView
                android:layout_gravity="center"
                android:text="@string/hardware_hotline"
                android:textSize="24sp"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_gravity="center"
                android:text="@string/hardware_number"
                android:textSize="36sp"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


    </LinearLayout>

    <TextView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:text="@string/weixin"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <ImageView
            android:layout_gravity="center"
            android:id="@+id/weixin_image"
            android:layout_width="500dp"
            android:layout_height="500dp"/>


</LinearLayout>