<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:gravity="center"
              android:layout_height="match_parent">

    <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="#ff6b6b6b"
            android:gravity="center"
            android:text="@string/select_success"
            />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

        <TextView
                android:id="@+id/cancle_btn"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/cancle"
                android:textSize="22sp"
                android:gravity="center"
                android:textColor="#ffffffff"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_button"
                android:layout_width="120dp"
                android:layout_height="60dp"/>

        <TextView
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="#ffffffff"
                android:layout_marginLeft="100dp"
                android:id="@+id/confirm_btn"
                android:clickable="true"
                android:text="@string/button_label_OK"
                android:focusable="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_button"
                android:layout_width="120dp"
                android:layout_height="60dp"/>

    </LinearLayout>


</LinearLayout>