<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_setting_for_s52">
    <RelativeLayout
            android:layout_width="550dip"
            android:layout_height="450dip"
            android:layout_marginTop="203dip"
            android:id="@+id/graphic_holder"
            android:orientation="vertical"
            android:gravity="top"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">
        <ImageView
                android:layout_width="550dip"
                android:layout_height="450dip"
                android:layout_margin="0dip"
                android:layout_alignParentRight="true"
                android:layout_alignParentLeft="true"
                android:src="@drawable/oobe_dashboard"
                android:id="@+id/status_icon"/>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="168dip"
                android:layout_marginTop="394dip"
                android:layout_alignTop="@id/status_icon"
                android:layout_alignLeft="@id/status_icon"
                android:id="@+id/speed_indicator">
            <TextView
                    style="@style/OobeIndicatorStyle"
                    android:layout_marginLeft="6dip"
                    android:layout_marginRight="6dip"
                    android:text="0"/>
            <TextView
                    style="@style/OobeIndicatorStyle"
                    android:layout_marginLeft="6dip"
                    android:layout_marginRight="6dip"
                    android:text="0"/>
            <TextView
                    style="@style/OobeIndicatorStyle"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:text="0"/>
            <TextView
                    style="@style/OobeIndicatorStyle"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:text="0"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dip"
                    android:textColor="#FFFFFFFF"
                    android:textSize="42sp"
                    android:text="."/>
            <TextView
                    style="@style/OobeIndicatorStyle"
                    android:layout_marginLeft="6dip"
                    android:layout_marginRight="6dip"
                    android:text="0"/>
            <TextView
                    style="@style/OobeIndicatorStyle"
                    android:layout_marginLeft="6dip"
                    android:layout_marginRight="6dip"
                    android:text="0"/>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:orientation="vertical"
            android:layout_marginTop="56dip"
            android:layout_marginLeft="36dip"
            android:gravity="left">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting"
                    android:textSize="29sp"
                    android:textColor="#FFFFFFFF"
                    android:alpha="0.6"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/node_speed_test"
                    android:textSize="29sp"
                    android:textColor="#FFFFFFFF"
                    android:alpha="0.6"/>
        </LinearLayout>

        <TextView
                android:layout_width="1054dip"
                android:layout_height="1dip"
                android:layout_marginTop="20dip"
                android:background="#65cccccc"/>
        <!-- <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oobe_subtitle"
            android:textSize="30sp"
            android:textColor="#FFC7A983"/> -->
    </LinearLayout>
    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/current_state_show_area"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/graphic_holder">
        <ProgressBar
                android:layout_width="347dip"
                android:layout_height="51dip"
                android:layout_centerHorizontal="true"
                android:id="@+id/current_progress"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:progressDrawable="@drawable/oobe_progress"
                android:visibility="invisible"
                android:layout_marginTop="20dip"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignTop="@id/current_progress"
                android:id="@+id/current_state_text"
                android:layout_marginTop="12dip"
                android:layout_marginLeft="15dip"
                android:textColor="#FFFFFFFF"
                android:textSize="30sp"/>

    </RelativeLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dip"
            android:id="@+id/test_result_area"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:visibility="invisible">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:paddingRight="40dip"
                android:paddingLeft="40dip">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/average_speed_text"
                    android:layout_marginTop="16dip"
                    android:layout_marginBottom="31dip"
                    android:textSize="45sp"
                    android:textColor="#FFFFFFFF"/>
            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="82dip"
                    android:layout_marginTop="10dip"
                    android:layout_marginBottom="20dip">
                <ProgressBar
                        android:layout_width="833dip"
                        android:layout_height="50dip"
                        android:id="@+id/average_bandwidth_indicator"
                        android:layout_margin="0dip"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:progressDrawable="@drawable/progress_results"/>
                <TextView
                        style="@style/ResultScaleStyle"
                        android:layout_marginLeft="18dip"
                        android:text="@string/adsl_1m"/>
                <TextView
                        style="@style/ResultScaleStyle"
                        android:layout_marginLeft="169dip"
                        android:text="@string/adsl_2m"/>
                <TextView
                        style="@style/ResultScaleStyle"
                        android:layout_marginLeft="320dip"
                        android:text="@string/adsl_4m"/>
                <TextView
                        style="@style/ResultScaleStyle"
                        android:layout_marginLeft="471dip"
                        android:text="@string/adsl_8m"/>
                <TextView
                        style="@style/ResultScaleStyle"
                        android:layout_marginLeft="622dip"
                        android:text="@string/adsl_10m"/>
                <TextView
                        style="@style/ResultScaleStyle"
                        android:layout_marginLeft="773dip"
                        android:text="@string/t1"/>
            </RelativeLayout>
        </LinearLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bandwidth_suggestion"
                android:layout_marginTop="29dip"
                android:layout_marginBottom="20dip"
                android:textSize="35sp"
                android:textColor="#FFF0F0F0"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:id="@+id/suggestion_text"
                android:textColor="#FFF0F0F0"
                android:visibility="visible"/>
    </LinearLayout>
    <Button
            android:layout_width="400dip"
            android:layout_height="55dip"
            android:background="@drawable/selector_button"
            android:id="@+id/oobe_action_btn"
            android:text="@string/StartTesting"
            android:textColor="#ffffffff"
            android:textSize="35sp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="120dip"/>
</RelativeLayout>